src/test/testData/component/InterfaceOrAbstract/ClassComponentFullAnnotation.java
@<error descr="@Component may only be applied to an interface or abstract class">dagger.Component</error>
public class ClassComponentFullAnnotation {

}
